@@ -1,3 +1,9 @@
+2017-11-08    <cerebrum@cleomedes.uit.no>
+
+	* ad_export_autogroups_undervisning.py: need to import access_FS
+	from the no tree in order to import override function
+	underv_enhet_xml_parser and underv_enhet_xml_parser
+
 2017-11-07    <cerebrum@cleomedes.uit.no>
 
 	* process_uit_email.py (calculate_uit_emails): updated script to
